# atlas-gateway

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  bitbucket-pipelines.yml  openapi.json  pyproject.toml
.github/workflows/: ci.yml
.trunk/: trunk.yaml
alembic/: env.py
alembic/versions/: b113ca4237b0_initial_gateway_schema.py  cb474b300c35_prompts_and_prompt_versions.py
app/: __init__.py  config.py  main.py  models.py
app/accounting/: __init__.py  _aiokafka_typing.py  adapter.py  events.py  recorder.py
app/api/: deps.py
app/api/v1/: chat.py  embeddings.py  models.py  usage.py
app/cache/: __init__.py  exact.py  semantic.py
app/domain/: __init__.py  errors.py  messages.py  openai.py
app/guardrails/: __init__.py  chain.py  citation.py  citation_mcp.py  content_policy.py  injection.py  injection_classifier.py  metrics.py  pii.py  pii_ner.py  schema_repair.py  size.py  tool_sanitize.py
app/limits/: __init__.py  _redis_typing.py  budget.py  ratelimit.py
app/observability/: __init__.py  log_redaction.py
app/providers/: __init__.py  anthropic.py  anthropic_provider.py  base.py  google.py  google_provider.py  mock.py  openai.py  openai_provider.py  registry.py
app/registry/: __init__.py  promotion.py  resolver.py
app/repositories/: __init__.py  base.py  seed.py  tables.py
app/resilience/: __init__.py  circuit_breaker.py  retry.py
app/routing/: __init__.py  aliases.py
app/services/: __init__.py  chat_service.py  embeddings_service.py  models_service.py
app/telemetry/: __init__.py  _genai_semconv.py  otel.py
deploy/: .helmignore  Chart.yaml  values-dev.yaml  values-prod.yaml  values-stage.yaml  values.yaml
deploy/templates/: NOTES.txt  _helpers.tpl  analysistemplate.yaml  deployment.yaml  hpa.yaml  poddisruptionbudget.yaml  rollout.yaml  secretproviderclass.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/diagrams/: circuit-breaker-state.md  component-c4.md  provider-class.puml  seq-cache-hit.md  seq-chat-nonstream.md  seq-chat-stream.md  seq-failover.md
loadtest/: locustfile.py
scripts/: README.md  build.sh  ci.sh  coverage.sh  dep_audit.py  docker.sh  export_openapi.py  infra.sh  lint.sh  load_test.py  local.sh  security.sh  seed_db.py  test.sh
tests/: test_accounting.py  test_accounting_adapter.py  test_anthropic_provider.py  test_budget.py  test_cache.py  test_call_events.py  test_chat_endpoint.py  test_circuit_breaker.py  test_citation.py  test_citation_mcp.py  test_content_policy.py  test_cors.py  test_embeddings.py  test_google_provider.py  test_guardrail_metrics.py  test_guardrails.py  test_injection.py  test_injection_classifier.py  test_integration.py  test_load_test.py  test_log_redaction.py  test_metrics.py  test_mock_provider.py  test_models.py  test_openai_provider.py  test_openapi_contract.py  test_pii.py  test_pii_ner.py  test_promotion_eval_gate.py  test_provider_registry_keys.py  test_providers.py  test_ratelimit.py  test_registry_promotion.py  test_registry_resolver.py  test_retry.py  test_routing.py  test_schema.py  test_schema_repair.py  test_semantic_cache.py  test_size.py  (+4 more)
tests/integration/: test_accounting_integration.py
