[project]
name = "atlas-gateway"
version = "0.1.0"
description = "Atlas LLM Gateway — OpenAI-compatible facade over OpenAI/Anthropic/Google"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==0.25.3",
    "httpx==0.28.1",
    "ruff==0.9.6",
    "pyright==1.1.394",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header", "fastapi.Query"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["app", "tests"]
venvPath = "."
venv = ".venv"
