[project]
name = "atlas-gateway"
version = "0.1.0"
description = "Atlas LLM Gateway — OpenAI-compatible facade over OpenAI/Anthropic/Google"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "redis==7.4.0",
    "sqlalchemy==2.0.50",
    "alembic==1.18.4",
    "psycopg[binary]==3.3.4",
    "asyncpg==0.31.0",
    "tenacity==9.1.4",
    "jinja2==3.1.6",
    "aiokafka==0.13.0",
    "opentelemetry-api==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-semantic-conventions==0.63b1",
    # Provider SDKs (GW-3..5). Each pinned to the latest release published on or
    # before 2026-05-24; all resolved transitive deps are ≥14 days old.
    "anthropic==0.104.1",
    "openai==2.38.0",
    "google-genai==2.6.0",
    # openai requires `tqdm>4`; the resolver's pick (4.68.1, 2026-06-05) is <14
    # days old, so pin to the latest tqdm published well before the floor.
    "tqdm==4.67.3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "pyright==1.1.394",
    "fakeredis==2.35.1",
    "pyyaml==6.0.2",  # scripts/dep_audit.py uses it to audit .trunk/trunk.yaml pins
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header", "fastapi.Query"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["app", "tests"]
venvPath = "."
venv = ".venv"
